[package]
name = "bevy-2d"
version = "0.1.3"
authors = ["DodoRare Team <support@dodorare.com>"]
edition = "2021"

[dependencies]
crossbow = "*"
log = "0.4"
bevy = { version = "0.8.1", default-features = false, features = ["bevy_winit", "render", "bevy_asset"] }

[package.metadata]
app_name = "Bevy 2D"
assets = ["../../assets"]
icon = "../../assets/images/icon.png"

[package.metadata.android]
app_wrapper = "ndk-glue"
release_build_targets = ["aarch64-linux-android"]
resources = ["../../assets/res/android"]

[package.metadata.apple]
release_build_targets = ["aarch64-apple-ios", "x86_64-apple-ios"]
resources = ["../../assets/res/apple"]
