[package]
name = "project_name"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2021"

[dependencies]
crossbow = "*"
log = "0.4"
anyhow = "1.0"
macroquad = "=0.3.7"

[patch.crates-io]
miniquad = { git = "https://github.com/not-fl3/miniquad", rev = "d67ffe6950cf73df307e2d23aaa4726f14399985" }

[package.metadata]
app_name = "Macroquad"
assets = ["assets"]
icon = "assets/icon.png"

[package.metadata.android]
app_wrapper = "quad"
release_build_targets = ["aarch64-linux-android"]

[package.metadata.apple]
release_build_targets = ["aarch64-apple-ios", "x86_64-apple-ios"]

